sfdx-source/apex-queue/main/objects/QueueableDispatch__c/QueueableDispatch__c.object-meta.xml
<CustomObject>
    <description>Ephemeral queueable handoff envelope for one enqueue or addBulk request. It is not a durable queue runtime.</description>
    <label>Queueable Dispatch</label>
    <nameField>
        <displayFormat>QueueableDispatch-{00000000}</displayFormat>
        <label>Queueable Dispatch Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Queueable Dispatches</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>