sfdx-source/apex-queue/main/objects/QueueableDispatch__c/fields/DedupeKey__c.field-meta.xml
<CustomField>
    <fullName>DedupeKey__c</fullName>
    <description>Optional caller-provided dedupe key used when submitting the initial queueable dispatcher.</description>
    <inlineHelpText>Optional addBulk dedupe key associated with this queueable handoff envelope.</inlineHelpText>
    <label>Dedupe Key</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>