sfdx-source/apex-queue/main/objects/QueueableDispatch__c/fields/DispatchDepth__c.field-meta.xml
<CustomField>
    <fullName>DispatchDepth__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Dispatcher continuation depth for this handoff. This is not executor retry depth.</description>
    <inlineHelpText>Used to decide when dispatcher continuation must bridge to a fresh async chain.</inlineHelpText>
    <label>Dispatch Depth</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>