sfdx-source/apex-queue/main/objects/QueueableDispatch__c/fields/DispatchedCount__c.field-meta.xml
<CustomField>
    <fullName>DispatchedCount__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Number of dispatch jobs resolved by this handoff, either by enqueueing an executor or failing the job before enqueue.</description>
    <inlineHelpText>Incremented when a queueable-mode job is resolved by dispatcher handoff.</inlineHelpText>
    <label>Dispatched Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>