sfdx-source/apex-queue/main/objects/QueueableDispatch__c/fields/DispatcherAsyncApexJobId__c.field-meta.xml
<CustomField>
    <fullName>DispatcherAsyncApexJobId__c</fullName>
    <description>AsyncApexJob Id of the queueable dispatcher currently advancing this handoff, not an executor job id.</description>
    <inlineHelpText>Tracks dispatcher queueable ownership only. Executor async ids are stored on Job__c.</inlineHelpText>
    <label>Dispatcher Async Apex Job Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>