sfdx-source/apex-queue/main/objects/QueueableDispatch__c/fields/FailedReason__c.field-meta.xml
<CustomField>
    <description>Failure reason captured when dispatcher handoff fails before all jobs are resolved.</description>
    <fullName>FailedReason__c</fullName>
    <inlineHelpText>Dispatcher failure message or exception summary.</inlineHelpText>
    <label>Failed Reason</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>