sfdx-source/apex-queue/main/objects/QueueableDispatch__c/fields/FinishedAt__c.field-meta.xml
<CustomField>
    <fullName>FinishedAt__c</fullName>
    <description>Time when dispatcher handoff reached COMPLETED or FAILED.</description>
    <inlineHelpText>Set when this queueable dispatch envelope reaches a terminal state.</inlineHelpText>
    <label>Finished At</label>
    <type>DateTime</type>
</CustomField>