sfdx-source/apex-queue/main/objects/QueueableDispatch__c/fields/Mode__c.field-meta.xml
<CustomField>
    <fullName>Mode__c</fullName>
    <defaultValue>&quot;QUEUEABLE_SERIAL&quot;</defaultValue>
    <description>Required queueable dispatch execution mode. QUEUEABLE_SERIAL hands off one executor per dispatcher chain step. QUEUEABLE_CONCURRENT fans out executor handoff through future bridge.</description>
    <inlineHelpText>QUEUEABLE_SERIAL is the default durable queueable mode. QUEUEABLE_CONCURRENT is an explicit future fanout mode.</inlineHelpText>
    <label>Mode</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>QUEUEABLE_CONCURRENT</fullName>
                <label>Queueable Concurrent</label>
            </value>
            <value>
                <fullName>QUEUEABLE_SERIAL</fullName>
                <default>true</default>
                <label>Queueable Serial</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>