sfdx-source/apex-queue/main/objects/QueueableDispatch__c/fields/QueueName__c.field-meta.xml
<CustomField>
    <fullName>QueueName__c</fullName>
    <description>Logical queue name for the queueable-mode jobs in this queueable handoff envelope.</description>
    <inlineHelpText>Queue name used when the queueable-mode jobs were submitted.</inlineHelpText>
    <label>Queue Name</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>