sfdx-source/apex-queue/main/objects/QueueableDispatch__c/fields/RequestedCount__c.field-meta.xml
<CustomField>
    <fullName>RequestedCount__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Number of queueable-mode jobs attached to this dispatch envelope.</description>
    <inlineHelpText>Total queueable-mode jobs requested for queueable handoff.</inlineHelpText>
    <label>Requested Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>