sfdx-source/apex-queue/main/objects/QueueableDispatch__c/fields/StartedAt__c.field-meta.xml
<CustomField>
    <fullName>StartedAt__c</fullName>
    <description>Time when dispatcher handoff first moved from WAITING to ACTIVE.</description>
    <inlineHelpText>Set by the queueable dispatcher when it starts processing this dispatch run.</inlineHelpText>
    <label>Started At</label>
    <type>DateTime</type>
</CustomField>