sfdx-source/apex-queue/main/objects/QueueableDispatch__c/fields/State__c.field-meta.xml
<CustomField>
    <fullName>State__c</fullName>
    <description>Lifecycle state for this ephemeral queueable dispatch handoff.</description>
    <inlineHelpText>Tracks WAITING, ACTIVE, COMPLETED, or FAILED dispatcher handoff state, not final job execution outcome.</inlineHelpText>
    <label>State</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>ACTIVE</fullName>
                <label>Active</label>
            </value>
            <value>
                <fullName>COMPLETED</fullName>
                <label>Completed</label>
            </value>
            <value>
                <fullName>FAILED</fullName>
                <label>Failed</label>
            </value>
            <value>
                <fullName>WAITING</fullName>
                <default>true</default>
                <label>Waiting</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>